infra/modules/networking/main.tf
## VPC
resource "aws_vpc" "main" {
    cidr_block = "10.0.0.0/22"
    enable_dns_hostnames = true
    enable_dns_support   = true

    tags = {
        Name = "threatmod-vpc"
    }
}

## Public Subnets
resource "aws_subnet" "public_a" {
    vpc_id = aws_vpc.main.id
    cidr_block = "10.0.0.0/25"
    availability_zone = "eu-west-2a"
    map_public_ip_on_launch = true

    tags = {
        Name = "threatmod-public-subnet-a"
    }
}

resource "aws_subnet" "public_b" {
    vpc_id = aws_vpc.main.id
    cidr_block = "10.0.0.128/25"
    availability_zone = "eu-west-2b"
    map_public_ip_on_launch = true
    
    tags = {
        Name = "threatmod-public-subnet-b"
    }
}

## Private Subnets
resource "aws_subnet" "private_a" {
    vpc_id = aws_vpc.main.id
    cidr_block = "10.0.1.0/25"
    availability_zone = "eu-west-2a"

    tags = {
        Name = "threatmod-private-subnet-a"
    }
}

resource "aws_subnet" "private_b" {
    vpc_id = aws_vpc.main.id
    cidr_block = "10.0.1.128/25"
    availability_zone = "eu-west-2b"

    tags = {
        Name = "threatmod-private-subnet-b"
    }
}

## Internet Gateway
resource "aws_internet_gateway" "main" {
    vpc_id = aws_vpc.main.id

    tags = {
        Name = "threatmod-internet-gateway"
    }
}

## Elastic IP
resource "aws_eip" "nat" {
    domain = "vpc"
    depends_on = [aws_internet_gateway.main]

    tags = {
        Name = "threatmod-nat-eip"
    }
}

## NAT Gateway
resource "aws_nat_gateway" "main" {
    allocation_id = aws_eip.nat.id
    subnet_id = aws_subnet.public_a.id

    tags = {
        Name = "threatmod-nat-gateway"
    }
}

## Route Tables
resource "aws_route_table" "public" {
    vpc_id = aws_vpc.main.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.main.id
    }

    tags = {
        Name = "threatmod-public-route-table"
    }
}

resource "aws_route_table" "private" {
    vpc_id = aws_vpc.main.id

    route {
        cidr_block = "0.0.0.0/0"
        nat_gateway_id = aws_nat_gateway.main.id
    }

    tags = {
        Name = "threatmod-private-route-table"
    }
}

## Route Table Associations
resource "aws_route_table_association" "public_a" {
    subnet_id = aws_subnet.public_a.id
    route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public_b" {
    subnet_id = aws_subnet.public_b.id
    route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private_a" {
    subnet_id = aws_subnet.private_a.id
    route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "private_b" {
    subnet_id = aws_subnet.private_b.id
    route_table_id = aws_route_table.private.id
}
